--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     background-image: url('https://github.com/CodeWithHarry/Sigma-Web-Dev-Course/blob/main/Video%2053/assets/images/bg.jpg?raw=true');
     /* background-size: max(1200px,100vw);  important otherwise gets blur. */
     background-size: cover;  /*  important otherwise gets blur.*/
-    height: 70vh;          /*height is important*/
+    height: 100vh;          /*height is important*/
     position: relative;
     background-position: center;
     background-repeat: no-repeat;
@@ -20,9 +20,9 @@ body
 
 .main .box
 {
-    height: 70vh;
+    height: 100vh;
     width: 100%;
-    opacity: 0.59;
+    opacity: 0.54;
     background-color: black;
     position: absolute;
     top:0%;
@@ -48,8 +48,16 @@ nav img
     width:90px;
     color: red;
     z-index: 10;
+    top:3px;
     position: relative;
 
+}
+
+.separation {
+    height: 3.21px;
+    background-color: rgb(56, 52, 52);
+    position: relative;
+    z-index: 20;
 }
 
 .content
@@ -61,6 +69,7 @@ nav img
     flex-direction: column;
     position: relative;
     color: white;
+    top: 49px;
     gap:5px;
     padding: 24px;
     text-align: center;
@@ -71,20 +80,20 @@ nav img
 {
 
     font-weight: 900;
-    font-size: 18px;
+    font-size: 27px;
     text-align: center;    
 }
 .content> :nth-child(2)
 {
     font-weight: 400;
-    font-size: 12px;
+    font-size: 17px;
     text-align: center;
 }
 
 .content>:nth-child(3)
 {
     font-weight: 400;
-    font-size: 13px;
+    font-size: 16px;
     text-align: center;
 }
 
@@ -97,23 +106,217 @@ nav img
 
 .btn
 {
-    
     font-weight: 600fffff;
     color: white;
     background-color: rgba(100, 94, 94, 0.55);
     border-radius: 4px;
-    padding:1px 10px;
+    padding:2px 5px;
+    margin: 5px;
+    box-sizing:border-box;
+    border: none;
+    
+}
+.btn select
+{
+    background:transparent;
+    border:none;
+    color: rgb(16, 14, 14);
+    filter: invert();
 }
 .btnred
 {
     background-color: red;
     color: white ;
 }
+.btnred a
+{
+    background-color: red;
+    color: white ;
+    text-decoration: none;  /*It hides underline*/
+}
 .first {
-    background-color: black;
-    color: white;
-    padding: 20px;
-    text-align: center;
-    font-size: 18px;
+    display: flex;
+    justify-content:center;
+    width: 100vw;
+    gap:20px;
+    margin: auto;
+    color:white;
+    align-items: center;
+    height: 60vh;
+}
+
+.secimg
+{
+    position: relative;
+}  /*because then we can't set absolute property to secimg video*/
+.secimg img
+{
+    width:25vw;
+    height: 123px;
+    position:relative;
+    z-index: 10;  
+    filter: brightness(1); 
+}
+.secimg video
+{
+    position: absolute;
+    top:51px;
+    right:0;
+    width: 555px;
+}
+.first>div
+{
+    display: flex;
+    padding: 14px 0;
+    flex-direction: column;
+    text-align: left;
+}
+
+
+.first>div :nth-child(1) {
+    font-size: 24px;
+    
+    padding: 14px 0;
+    justify-content: left;
+    font-weight: bolder;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.first>div :nth-child(2) {
+    font-size: 12px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
+
+.faq h2
+{
+    text-align: center;
+    padding-bottom: 14px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.faq
+{
+    background: black;
+    color:white; 
+    padding: 15px;
+    position: relative;
+}
+.faqbox
+{
+    display: flex;
+    justify-content: space-between;
+    gap:230px;
+    max-width: 70vw;
+    background-color: gray;
+    color:white;
+    padding: 10px;
+    transition: all is ease-out;
+    margin:8.03px auto;
+    cursor: pointer;
+    border-radius: 1.89px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.faqbox svg
+{
+    position:absolute;
+    right: 130px;
+}
+.faqbox:hover
+{
+    background-color: rgb(182, 177, 177);
+    
+}
+footer {
+    color: white;
+    max-width: 70vw;
+    margin: auto;
+    padding: 30px;
+    color:white;
+}
+
+footer .questions {
+    padding: 18px 0;
+    color: white;
+    text-decoration: none;
+}
+
+
+.footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    color: white;
+}
+
+@media screen and (max-width:500px)
+{
+    nav{
+        max-width: 90vw;
+    }
+
+    .first {
+        flex-wrap: wrap;
+    }
+
+    .secImg img {
+        width: 305px;
+    }
+
+    .secImg video {
+        width: 305px;
+    }
+
+    .hero> :nth-child(1) {
+        font-size: 32px;
+    }
+
+    .hero> :nth-child(2) {
+        font-size: 18px;
+    }
+
+    .hero> :nth-child(3) {
+        font-size: 18px;
+    }
+
+    .hero-buttons {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 16px;
+    }
+
+    .faq h2 {
+        text-align: center;
+        font-size: 32px;
+    }
+
+    footer {
+        max-width: 90vw;
+        padding: 75px 0;
+    }
+
+    .footer-item{
+        align-items: center;
+    }
+
+    .footer {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 25px;
+    }
+}
+
+
+.footer a {
+    font-size: 14px;
+    color: white;
+}
+
+.footer-item {
+    display: flex;
+    flex-direction: column;
+    gap: 23px;
+
 }
